iOS standalone fixes for the swiping. Without touch-action: none a perfectly horizontal swipe was required if starting it on the side sheet, regardless of scrollbar presence.

--- a/src/css/games.css
+++ b/src/css/games.css
@@ -134,7 +134,14 @@
     padding: var(--safe-area-inset-top) var(--safe-area-inset-right) var(--safe-area-inset-bottom) 0;
     /* Material Design Accelerate/exit easing: https://material.io/design/motion/speed.html#easing */
     transition: transform .2s cubic-bezier(0.4, 0.0, 1, 1);
-    touch-action: pan-y pinch-zoom;
+    touch-action: none; /* Required for iOS standalone otherwise it shadow scrolls and cancels the swipe right */
+}
+
+/* Requires update if side sheet size changes; JS-based solution required scrolling twice on iOS standalone */
+@media (max-width: 315px), (max-height: 450px) {
+    .side-sheet {
+        touch-action: pan-x pan-y;
+    }
 }
 
 #game-settings.show {
